--- a/m4d/Views/Song/RawSearchForm.cshtml
+++ b/m4d/Views/Song/RawSearchForm.cshtml
@@ -22,10 +22,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Filter, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ODataFilter, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Filter, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
-                @Html.ValidationMessageFor(model => model.Filter, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ODataFilter, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
+                @Html.ValidationMessageFor(model => model.ODataFilter, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -55,6 +55,28 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+@if (ViewData.ContainsKey("AzureIndexInfo"))
+{
+    <div class="row">
+        <div class="col-xs-12">
+            <table class="table table-striped table-bordered">
+                <thead class="big-text">Azure Search Fields</thead>
+                <tbody>
+                <tr><td>Field</td><td>Datatype</td><td>Searchable</td><td>Sortable</td><td>Filterable</td><td>Facetable</td><td>Retrievable</td></tr>
+                @foreach (var field in ViewBag.AzureIndexInfo.Fields)
+                {
+                    <tr>
+                        <td>@field.Name</td>
+                        <td>@field.Type</td>
+                        <td>@field.IsSearchable</td>
+                        <td>@field.IsSortable</td>
+                        <td>@field.IsFilterable</td>
+                        <td>@field.IsFacetable</td>
+                        <td>@field.IsRetrievable</td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </div>
+    </div>
+}
