Fix the bug where back to list wasn't working when azure search was enables. Add an index-c just in case Change the semantics of "everything I've tagged" to explictly exclude Hates
Related Work Items: #614, #615

--- a/m4d/App_Code/SongHelper.cshtml
+++ b/m4d/App_Code/SongHelper.cshtml
@@ -94,16 +94,11 @@
 
 @helper Footer(System.Web.Mvc.HtmlHelper html, UrlHelper urlHelp, PagedList.IPagedList<SongBase> songs, SongFilter filter)
 {
-    var action = filter.Action;
     var danceQuery = filter.DanceQuery;
 
-    if (filter.IsAzure)
-    {
-        action = "azuresearch";
-    }
     <div class="row">
         <div class="col-md-6">
-            @html.PagedListPager(songs, page => urlHelp.Action(action, new {page, filter}))
+            @html.PagedListPager(songs, page => urlHelp.Action(filter.TargetAction, new {page, filter}))
         </div>
         <div class="col-md-2 pagination-align">
             Page @(songs.PageCount < songs.PageNumber ? 0 : songs.PageNumber) of @songs.PageCount
@@ -135,7 +130,7 @@
                     Not seeing as many songs as you expect in this list?
                     You are currently seeing only songs that someone has explicitly tagged as @(danceQuery.ToString()).
                     You can widen the search by choosing to include songs inferred by tempo on the @html.ActionLink("Advanced Search page", "AdvancedSearchForm", "Song", new {filter = newFilter}, null)
-                    or just @html.ActionLink("clicking here", action, "Song", new {filter = newFilter}, null).
+                    or just @html.ActionLink("clicking here", filter.TargetAction, "Song", new {filter = newFilter}, null).
                 </p>
             </div>
         </div>
