--- a/m4d/Views/Admin/Diagnostics.cshtml
+++ b/m4d/Views/Admin/Diagnostics.cshtml
@@ -45,6 +45,7 @@
     <li>@Html.ActionLink("free", "SetSearchIdx", "Admin", new { id="free" }, null)</li>
     <li>@Html.ActionLink("basica", "SetSearchIdx", "Admin", new { id = "basica" }, null)</li>
     <li>@Html.ActionLink("basicb", "SetSearchIdx", "Admin", new { id = "basicb" }, null)</li>
+    <li>@Html.ActionLink("basicc", "SetSearchIdx", "Admin", new { id = "basicc" }, null)</li>
 </ul>
 
 
