--- a/m4d/Views/Song/Edit.cshtml
+++ b/m4d/Views/Song/Edit.cshtml
@@ -11,7 +11,7 @@
 @Html.Partial("EditCore")
 
 <div>
-    @Html.ActionLink("Back to List", (string)ViewBag.SongFilter.TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
+    @Html.ActionLink("Back to List", ((SongFilter)ViewBag.SongFilter).TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
 </div>
 
 @if (ViewData.ContainsKey("Errors"))
