--- a/m4d/Views/Song/MusicServiceSearch.cshtml
+++ b/m4d/Views/Song/MusicServiceSearch.cshtml
@@ -78,5 +78,5 @@
 }
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Song.SongId, filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-default", role = "button" })
-    @Html.ActionLink("Back to List", (string)ViewBag.SongFilter.TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
+    @Html.ActionLink("Back to List", ((SongFilter)ViewBag.SongFilter).TargetAction, new { filter = ViewBag.SongFilter }, new { @class = "btn btn-small btn-primary", role = "button" })
 </p>
