--- a/m4d/Views/Dance/Details.cshtml
+++ b/m4d/Views/Dance/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Globalization
 @using MarkdownDeep
 @using m4d.Utilities
-@model SongCounts
+@model DanceStats
 
 @{
     ViewBag.Title = Model.DanceName + " Information, Top Ten List, and Resources.";
