--- a/m4d/Views/Dance/Index.cshtml
+++ b/m4d/Views/Dance/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DanceLibrary
-@model IEnumerable<SongCounts>
+@model IEnumerable<DanceStats>
 
 @{
     ViewBag.Title = "Dance Style Index";
