--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -9,7 +9,7 @@
     ViewBag.Title = "Songs for Dancing";
     ViewBag.Description = "music4dance catalog: " + description;
 
-    var dances = (IList<SongCounts>)ViewBag.Dances;
+    var dances = (IList<DanceStats>)ViewBag.Dances;
 
     var userName = filter.UserQuery.IsEmpty ? User.Identity.Name : filter.UserQuery.UserName;
 }
