--- a/m4d/Views/Dance/weddingdancemusic.cshtml
+++ b/m4d/Views/Dance/weddingdancemusic.cshtml
@@ -20,7 +20,7 @@
         var column = columns[i];
 
         var tag = column + ":Other";
-        counts[i] = danceStats.Dance.SongTags.TagCount(tag);
+        counts[i] = danceStats.SongTags.TagCount(tag);
         if (counts[i] != 0)
         {
             show = true;
