Finished up the JSON serialization of dance stats (no deserialization yet)

--- a/m4d/App_Code/DanceHelper.cshtml
+++ b/m4d/App_Code/DanceHelper.cshtml
@@ -76,7 +76,7 @@
 
 @helper LinkCategory(System.Web.Mvc.HtmlHelper html, string name)
 {
-    @html.ActionLink(name, DanceObject.SeoFriendly(name), "dances");
+    @html.ActionLink(name, DanceObject.SeoFriendly(name), "dances")
 }
 
 @helper BallroomList(System.Web.Mvc.HtmlHelper html)
