--- a/m4d/Views/Admin/InitializationTasks.cshtml
+++ b/m4d/Views/Admin/InitializationTasks.cshtml
@@ -17,7 +17,7 @@
 
 <h3> Initializiation Tasks</h3>
 <ul>
-    <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache") (@DanceStatsManager.Reloads - autoreloads)</li>
+    <li>@Html.ActionLink("Clear Song Cache", "ClearSongCache") - @Html.ActionLink("with Reload", "ClearSongCache", new {reload=true}, null) (@DanceStatsManager.Reloads - autoreloads)</li>
     <li>
         @Html.ActionLink("RebuildDanceInfo", "RebuildDanceInfo")
         <ul>
