Got basic stats coming out of Azure Search Facets

--- a/m4d/Views/Admin/Tags.cshtml
+++ b/m4d/Views/Admin/Tags.cshtml
@@ -10,10 +10,19 @@
 <h3>Tags</h3>
 <ul>
     <li>@Html.ActionLink("Tag List", "index", "tag")</li>
-    <li>@Html.ActionLink("Check Tag Types", "UpdateTagTypes", new { update = false }, null)</li>
-    <li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes", new { update = true }, null)</li>
+    <li>@Html.ActionLink("Check Tag Types", "UpdateTagTypes", new {update = false}, null)</li>
+    <li>@Html.ActionLink("Update Tag Types", "UpdateTagTypes", new {update = true}, null)</li>
     <li>@Html.ActionLink("Update Tag Summaries", "UpdateTagSummaries")</li>
-    <li>@Html.ActionLink("Check User Tags", "RebuildUserTags", new { update = false }, null)</li>
-    <li>@Html.ActionLink("Update User Tags", "RebuildUserTags", new { update = true }, null)</li>
-    <li>@Html.ActionLink("Update User Tags (for specific song)", "RebuildUserTags", new { update = true, songIds = "372709cb-f116-4692-b990-f0fd80e7a84e" }, null)</li>
+    <li>@Html.ActionLink("Check User Tags", "RebuildUserTags", new {update = false}, null)</li>
+    <li>@Html.ActionLink("Update User Tags", "RebuildUserTags", new {update = true}, null)</li>
+    <li>@Html.ActionLink("Update User Tags (for specific song)", "RebuildUserTags", new {update = true, songIds = "372709cb-f116-4692-b990-f0fd80e7a84e"}, null)</li>
+</ul>
+
+<h3>Azure Tags</h3>
+<ul>
+    <li>@Html.ActionLink("DanceTags", "AzureFacets", new { categories = "DanceTags", count = 100 }, null)</li>
+    <li>@Html.ActionLink("DanceTagsInferred", "AzureFacets", new {categories = "DanceTagsInferred", count = 100}, null)</li>
+
+    <li>@Html.ActionLink("Tags", "AzureFacets", new { categories = "GenreTags,StyleTags,TempoTags,OtherTags", count = 100 }, null)</li>
+
 </ul>
