--- a/m4d/Views/Admin/UploadBackup.cshtml
+++ b/m4d/Views/Admin/UploadBackup.cshtml
@@ -86,6 +86,8 @@
 
     <h2>JSON Backup</h2>
     <li>@Html.ActionLink("Dance Statistics", "DanceStatistics")</li>
+    <li>@Html.ActionLink("From Sql", "DanceStatistics", new {soure="sql"}, null)</li>
+    <li>@Html.ActionLink("From Azure", "DanceStatistics", new { source = "azure" }, null)</li>
 
 
     <h3>Backup Delta</h3>
