Make songsummary for dances be specific tot he dance and create and aggregate summary for groups.

--- a/m4d/Views/Admin/Diagnostics.cshtml
+++ b/m4d/Views/Admin/Diagnostics.cshtml
@@ -41,10 +41,11 @@
 </ul>
 
 <h3>Search Index: @ViewBag.SearchIdx</h3>
+<p>Source = @ViewBag.StatsUpdateSource, Time=@ViewBag.StatsUpdateTime</p>
 <ul>
     <li>@Html.ActionLink("basica", "SetSearchIdx", "Admin", new { id = "basica" }, null)</li>
     <li>@Html.ActionLink("basicb", "SetSearchIdx", "Admin", new { id = "basicb" }, null)</li>
-    <li>@Html.ActionLink("basicc", "SetSearchIdx", "Admin", new { id = "basicc" }, null)</li>
+    <li>@Html.ActionLink("basicc", "SetSearchIdx", "Admin", new {id = "basicc"}, null)</li>
 </ul>
 
 
